@@ -1,4 +1,5 @@
 1.1.0
+   - bug [11078] "ReviewRelation-pluginnet bruges ikke mere og kan slettes."
    - bug [10940] "FlowMapCreator skal udviddes til at  de genererede lister også indeholder environments."
    - bug [11070] "byg under eclipse fejler."
    - bug [11055] "option: "bench" virker ikke mere."
